# logger

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main_build.yml
examples/: CMakeLists.txt  example_advanced.cpp  example_basic.cpp
include/: logger.hpp
src/: logger.cpp
tests/: CMakeLists.txt  logger_test.cpp
